fix: overflow-y 추가로 인해 overflow-x 생기는 거 방지

--- a/WebContent/resources/css/common.css
+++ b/WebContent/resources/css/common.css
@@ -102,6 +102,7 @@ pre {
 	border-color: inherit;
 	min-height: 500px;
 	overflow-y:auto;
+	overflow-x:hidden;
 }
 
 .content .container .table-container th {
